@@ -12,6 +12,7 @@ import static com.google.common.truth.Truth.assertThat;
 import static org.junit.Assume.assumeTrue;
 import static org.sosy_lab.cpachecker.util.test.TestUtils.configurationForTest;
 
+import com.google.common.collect.ImmutableList;
 import java.io.IOException;
 import java.util.List;
 import org.junit.Test;
@@ -60,9 +61,9 @@ public class ConcurrencyOverflowTest {
 
   @Parameters(name = "{0} [{1}]")
   public static List<Object[]> testData() {
-    List<String> configs = List.of(PREDICATE, SEQUENTIALIZATION);
+    List<String> configs = ImmutableList.of(PREDICATE, SEQUENTIALIZATION);
     List<Pair<String, Result>> testCases =
-        List.of(
+        ImmutableList.of(
             Pair.of("overflow_safe.c", Result.TRUE),
             Pair.of("overflow_unsafe.c", Result.FALSE),
             Pair.of("overflow_after_join_unsafe.c", Result.FALSE),
